src/app/core/sass/core.scss
/**
 * @provide core
 *
 * @require mixins
 * @require classes
 * @require icons
 * @require imports
 * @require vars
 */

/*************************** DEFAULTS ***************************/

html * {
	font-family: "Roboto", "Helvetica", "Arial";

	-webkit-user-select: none;
	-moz-user-select: -moz-none;
	-ms-user-select: none;
	user-select: none;

	@include vendorize(box-sizing, border-box);
}

input, textarea {
	-moz-user-select: text;
}

ul{
	padding: 0;
	margin: 0;
}

li{
	list-style: none;
}

[data-role=header]{
	height: $headerHeight;
	line-height: $padding * 6;
	// border-color: #111;
	// border-bottom: 1px solid;
	// background-color: $background;
	background-image: url("../img/darkdenim3.png");
	position: absolute;
	top:0; right: 0; left: 0;
	@include transition(all .2s);

	&.mini {
		height: $headerHeight/2;
		line-height: $headerHeight/2;
		font-size: .5rem;
	}

	.title{
		color: $textColor;
		text-align: center;
		font-size: 1.3em; // don't use rem here as this font size should be dependent on the header bar font size which can vary.
		font-weight: 400;
		// font-family: Roboto;
		line-height: 2.3em;
	}

	.header-button {
		color: $textColor;
		font-size: 1.6em; // don't use rem here as this font size should be dependent on the header bar font size which can vary.
		padding: 0 $padding;
		line-height: 1.6em;

		&:active{
			color: $red;
		}

		&.left {
			float: left;
		}

		&.right {
			float: right;
		}
	}

	.menu-button{
		@extend .header-button;
	}

	.back-button{
		@extend .header-button;
	}

	.forward-button{
		@extend .header-button;
	}
}

[data-role=content] {
	padding: 0px;
	position: absolute;
	top: $headerHeight;
	bottom: 0; left: 0; right: 0;
	@include transition(top .2s);

	&.mini {
		top: $headerHeight/2;
	}
}

#menu {
	height: 100px;
	position: absolute;
	top: -100px;
	left: 0; right: 0;
	background: url("../img/darkdenim3.png");
	text-align: justify;
	vertical-align: middle;
	z-index: 999;
	padding: $padding * 2;

	&.expand {
		box-shadow: 0 2px 10px 2px $background;
		@include transform(translateY(95px));
	}

	.menu-item {
		background: rgba($background, .3);
		display: inline-block;
		// margin-top: 5px;
		width: 8 * $padding;
		height: 8 * $padding;
		box-shadow: 0px 0px 8px 0px $darkBackground inset;
		color: rgba($orange, .6);
		font-size: 1.6rem;
		text-align: center;
		vertical-align: middle;
		border-radius: 100%;
		position: relative;
		@include transition(box-shadow .2s);

		@include vmiddle();

		&:active {
			box-shadow: 0 0 0 2*$padding rgba($orange, .9) inset;
		}
	}

	@include vmiddle(){
		display:none;
	};

	@include justify();
}

.csstransforms3d #menu {
	@include transition(transform .4s);
}

